Start no projeto

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +7,24 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>
-     awdawd
-    </h1>
+    <header>
+        <div>
+            <h1>cabeçlho</h1>
+        </div>
+    </header>
+    <section>
+        <div>
+            <h2>
+                corpo
+            </h2>
+        </div>
+    </section>
+    <footer>
+        <div>
+            <h3>
+                fim
+            </h3>
+        </div>
+    </footer>
 </body>
 </html>
