--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-    <header>
+    <header class="Cabeça">
         <div>
             <h1>cabeçlho</h1>
+        </div>
+        <div>
+            <input type="button" value="Pesquisar" class="btn">
         </div>
     </header>
     <section>
@@ -26,5 +30,7 @@
             </h3>
         </div>
     </footer>
+
+    <script src="./index.js"></script>
 </body>
 </html>
