--- a/index.html
+++ b/index.html
@@ -4,33 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MetFlix</title>
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-    <header class="Cabeça">
-        <div>
-            <h1>cabeçlho</h1>
+    <div class="topo">
+        <div class="logo">
+            <a href="#">
+                <img src="./imgs/LogoNetflix.png" alt="">
+            </a>
         </div>
-        <div>
-            <input type="button" value="Pesquisar" class="btn">
-        </div>
-    </header>
-    <section>
-        <div>
-            <h2>
-                corpo
-            </h2>
-        </div>
-    </section>
-    <footer>
-        <div>
-            <h3>
-                fim
-            </h3>
-        </div>
-    </footer>
+    </div>
 
-    <script src="./index.js"></script>
+    <div class="login_body">
+        <div class="login_caixa">
+            <h1>
+                Entrar
+            </h1>
+            <div>
+                <div class="input_caixa" id="Email">
+                    <input type="email" placeholder="Email ou numero de Telefone">
+                </div>
+                <div class="input_caixa" id="senha">
+                    <input type="password" placeholder="Senha">
+
+                </div>
+                <div >
+                    <button onclick="go()">
+                        Entrar
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
