--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
                 Entrar
             </h1>
             <div>
-                <div class="input_caixa" id="Email">
-                    <input type="email" placeholder="Email ou numero de Telefone">
+                <div class="input_caixa">
+                    <input type="email" placeholder="Email ou numero de Telefone" id="Email">
                 </div>
-                <div class="input_caixa" id="senha">
-                    <input type="password" placeholder="Senha">
+                <div class="input_caixa" >
+                    <input type="password" placeholder="Senha" id="senha">
 
                 </div>
                 <div >
@@ -37,5 +37,9 @@
             </div>
         </div>
     </div>
+    <div class="copy">
+        <p>&copy;CriasDoSTC</p>
+    </div>
+    <script src="./index.js"></script>
 </body>
 </html>
