--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pag Inicial</title>
+    <link rel="stylesheet" href="./home.css">
 </head>
 <body>
     <H1>Bem vindo a netflixdawd</H1>
