insererir input  logo e fundo

--- a/home.html
+++ b/home.html
@@ -8,6 +8,18 @@
     <link rel="stylesheet" href="./home.css">
 </head>
 <body>
-    <H1>Bem vindo a netflixdawd</H1>
+ <div class="topo">
+    <div class="logo">
+      <a href="#">
+        <img src="./imgs/LogoNetflix.png" alt="">
+      </a>
+    </div>
+ </div>
+ <div>
+    <div class="input_pesquisar">
+        <input type="text" placeholder="Pesquisar Filme" id="TextoPesquisar"></input>
+        <input type="submit" placeholder="Pesquisar" id="BotaoPesquisar"></input>
+    </div>
+ </div>
 </body>
 </html>
