Integração da api

--- a/home.html
+++ b/home.html
@@ -17,9 +17,19 @@
  </div>
  <div>
     <div class="input_pesquisar">
-        <input type="text" placeholder="Pesquisar Filme" id="TextoPesquisar"></input>
-        <input type="submit" placeholder="Pesquisar" id="BotaoPesquisar"></input>
+        <input type="text" placeholder="Nome do Filme" class="TextoPesquisar"></input>
+        <input type="submit" placeholder="Pesquisar" class="BotaoPesquisar"></input>
     </div>
  </div>
+  <div>
+    <ul class="filme" id="Filmes"></ul>
+  </div>
+
+      
+    
+
+ 
+
+ <script src="./api.js"></script>
 </body>
 </html>
