--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pag Inicial</title>
+    <title>Pesquisar Filme</title>
     <link rel="stylesheet" href="./home.css">
 </head>
 <body>
@@ -15,6 +15,15 @@
       </a>
     </div>
  </div>
+  <div class="Texto-filme-pai">
+    <div class="container">
+      <div class="Texto-filme-filho">
+        <h1 class="filme-titulo">Filmes, séries e muito mais. Sem Limites.</h1>
+        <h2 class="filme-subtitulo">Assista onde quiser. Cacele quando quiser.</h2>
+        <p class="filme-msg">Pronto para assistir? Informe seu email para criar ou reiniciar sua assinatura.</p>
+      </div>
+    </div>
+  </div>
  <div>
     <div class="input_pesquisar">
         <input type="text" placeholder="Nome do Filme" class="TextoPesquisar"></input>
