--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
     <div class="container">
       <div class="Texto-filme-filho">
         <h1 class="filme-titulo">Filmes, séries e muito mais. Sem Limites.</h1>
-        <h2 class="filme-subtitulo">Assista onde quiser. Cacele quando quiser.</h2>
+        <h2 class="filme-subtitulo">Assista onde quiser. Cancele quando quiser.</h2>
         <p class="filme-msg">Pronto para assistir? Informe seu email para criar ou reiniciar sua assinatura.</p>
       </div>
     </div>
@@ -30,7 +30,7 @@
         <input type="submit" placeholder="Pesquisar" class="BotaoPesquisar"></input>
     </div>
  </div>
-  <div>
+  <div class="Lista_de_filmes">
     <ul class="filme" id="Filmes"></ul>
   </div>
 
