Ajuste no responsivo do mobile

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <input type="password" placeholder="Senha" id="senha">
 
                 </div>
-                <div >
+                <div class="btn_entrar">
                     <button onclick="go()">
                         Entrar
                     </button>
