--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
                 </div>
                 <div class="btn_entrar">
-                    <button onclick="go()">
+                    <button onclick="go">
                         Entrar
                     </button>
                 </div>
