--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
 
                 </div>
                 <div class="btn_entrar">
-                    <button onclick="go">
-                        Entrar
-                    </button>
+                    
+                    <input type="button" placeholder="Entrar" onclick="go()">
                 </div>
             </div>
         </div>
