--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
                 </div>
                 <div class="btn_entrar">
                     
-                    <input type="button" placeholder="Entrar" onclick="go()">
+                    <button onclick="go()">
+                        Entrar
+                    </button>
                 </div>
             </div>
         </div>
